2015-02-03  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.8 release procedure:
 	Changes since nco-4_4_7: -A warn, PPC, cnk nco=rew+lfp
	cd ~/nco;cvs tag -d nco-4_4_8;cvs tag -d nco-4_4_8-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.8 release"
	cvs tag -c nco-4_4_8;cvs tag -c nco-4_4_8-1

	* Explicit cast instead of implicit coercion to squelch many MSVC warnings

	* Put string.h headers in nco_cln_utl.h

	* Add isblank() for MSVC

	* Fix nco_var_lst_add() call in ncap_lex.l to restore g++ compilation capability

	* Fix compiling problems on MSVC

2015-02-02  Charlie Zender  <zender@uci.edu>

	* Implement cnk plc_nco and cause it and map_rew to do map_rew for 3-D otherwise map_lfp

	* Optimize nco_ppc_set_var(), fail on invalid variable names

	* Fully document PPC, NSD, DSD

2015-01-31  Charlie Zender  <zender@uci.edu>

	* Specifying PPC triggers dfl_lvl=1 on netCDF4 if not otherwise set

	* Allow PPC on netCDF3

2015-01-30  Charlie Zender  <zender@uci.edu>

	* Warn on incorrect NSD input

2015-01-29  Charlie Zender  <zender@uci.edu>

	* Change generic name from LSD to PPC (precision-preserving compression)

	* Implement threshold precision that turns-off LSD on per-variable basis

2015-01-28  Charlie Zender  <zender@uci.edu>

	* DSD and NSD compression both appear to work and pass all regressions

	* Zero two additional bits from significand in nco_var_bitmask()

	* Fix missing value treatment in nco_var_bitmask()

	* Change nco_var_around() from lrint() to rint() (duh!)

	* Dynamically allocate dimension string info in nco_prn_var_dfn() so NCO works on AIRS files with loooong dimension names

2015-01-26  Charlie Zender  <zender@uci.edu>

	* Functionalize NSD algorithm into nco_var_bitmask()

	* Prototype NSD algorithm compiles, runs, and appears to work as expected

2015-01-25  Charlie Zender  <zender@uci.edu>

	* Demonstrate LSD failure on lsd_bgr, need real precision algorithm

	* Add LSD to ncpdq, document in nco.texi, regression tests
