@@ -1,10 +1,16 @@
-2015-02-03  Charlie Zender  <zender@uci.edu>
+2015-02-04  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.4.8 release procedure:
  	Changes since nco-4_4_7: -A warn, PPC, cnk nco=rew+lfp
 	cd ~/nco;cvs tag -d nco-4_4_8;cvs tag -d nco-4_4_8-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.4.8 release"
 	cvs tag -c nco-4_4_8;cvs tag -c nco-4_4_8-1
+
+	* Document PPC efficacy in tbl_ppc_nc
+
+	* Fix ppc used in ncpdq
+
+2015-02-03  Charlie Zender  <zender@uci.edu>
 
 	* Explicit cast instead of implicit coercion to squelch many MSVC warnings
 
